--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,8 @@
   "projects": {
     "api": "apps/api",
     "api-interfaces": "libs/api-interfaces",
+    "backend-tec-api": "libs/backend/tec-api",
+    "frontend-feature-wrapper": "libs/frontend/feature-wrapper",
     "trip-expense-calculator": "apps/trip-expense-calculator",
     "trip-expense-calculator-e2e": "apps/trip-expense-calculator-e2e"
   }
