--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~14.2.0",
+    "@angular/cdk": "^14.2.0",
     "@angular/common": "~14.2.0",
     "@angular/compiler": "~14.2.0",
     "@angular/core": "~14.2.0",
+    "@angular/flex-layout": "^14.0.0-beta.40",
     "@angular/forms": "~14.2.0",
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
@@ -49,10 +51,10 @@
     "@nrwl/nest": "14.6.3",
     "@nrwl/node": "14.6.3",
     "@nrwl/workspace": "14.6.3",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "~5.33.1",
-    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
     "@typescript-eslint/parser": "~5.33.1",
     "better-sqlite3": "^7.6.2",
     "cypress": "^10.2.0",
