added new library for ui components removed test files

--- a/angular.json
+++ b/angular.json
@@ -8,6 +8,7 @@
     "frontend-data-access-trip": "libs/frontend/data-access-trip",
     "frontend-feature-trip": "libs/frontend/feature-trip",
     "frontend-feature-wrapper": "libs/frontend/feature-wrapper",
+    "frontend-util-shared": "libs/frontend/util-shared",
     "trip-expense-calculator": "apps/trip-expense-calculator",
     "trip-expense-calculator-e2e": "apps/trip-expense-calculator-e2e"
   }
