added data source libraries for user and expense. implemented add member functionality

--- a/angular.json
+++ b/angular.json
@@ -5,7 +5,9 @@
     "api": "apps/api",
     "api-interfaces": "libs/api-interfaces",
     "backend-tec-api": "libs/backend/tec-api",
+    "frontend-data-access-expense": "libs/frontend/data-access-expense",
     "frontend-data-access-trip": "libs/frontend/data-access-trip",
+    "frontend-data-access-user": "libs/frontend/data-access-user",
     "frontend-feature-trip": "libs/frontend/feature-trip",
     "frontend-feature-wrapper": "libs/frontend/feature-wrapper",
     "frontend-util-shared": "libs/frontend/util-shared",
