--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,8 +18,14 @@
     "paths": {
       "@trip-expense-calculator/api-interfaces": ["libs/api-interfaces/src/index.ts"],
       "@trip-expense-calculator/backend/tec-api": ["libs/backend/tec-api/src/index.ts"],
+      "@trip-expense-calculator/frontend/data-access-expense": [
+        "libs/frontend/data-access-expense/src/index.ts"
+      ],
       "@trip-expense-calculator/frontend/data-access-trip": [
         "libs/frontend/data-access-trip/src/index.ts"
+      ],
+      "@trip-expense-calculator/frontend/data-access-user": [
+        "libs/frontend/data-access-user/src/index.ts"
       ],
       "@trip-expense-calculator/frontend/feature-trip": ["libs/frontend/feature-trip/src/index.ts"],
       "@trip-expense-calculator/frontend/feature-wrapper": [
